force-app/main/default/objects/Bus__c/Bus__c.object-meta.xml
<CustomObject>
    <label>Bus</label>
    <nameField>
        <label>Bus Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Buses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>