force-app/main/default/objects/Bus__c/fields/Air_conditioned__c.field-meta.xml
<CustomField>
    <fullName>Air_conditioned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Air conditioned</label>
    <type>Checkbox</type>
</CustomField>