force-app/main/default/objects/Bus__c/fields/Last_Maintenance_Odometer_Reading__c.field-meta.xml
<CustomField>
    <fullName>Last_Maintenance_Odometer_Reading__c</fullName>
    <label>Last Maintenance Odometer Reading</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>