force-app/main/default/objects/Bus__c/fields/Miles_Since_Last_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Miles_Since_Last_Maintenance__c</fullName>
    <formula>Odometer_Reading__c -  Last_Maintenance_Odometer_Reading__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Miles Since Last maintenance visit</inlineHelpText>
    <label>Miles Since Last Maintenance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>