force-app/main/default/objects/Bus__c/fields/test__c.field-meta.xml
<CustomField>
    <fullName>test__c</fullName>
    <formula>(IF(ISPICKVAL(Maximum_Capacity__c,&apos;24&apos;), 
       120000, 
       IF(ISPICKVAL(Maximum_Capacity__c,&apos;36&apos;), 
       160000, 0))
*IF(ISPICKVAL(Current_Status__c,&apos;Ready for Use&apos;) ,1, 0) 
-IF(Odometer_Reading__c &gt; 100000, (Odometer_Reading__c - 100000)*0.10,0))

* IF(Air_conditioned__c , 1.03 ,1 ) 
* IF( Year__c &lt; 1972,1.32,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>test</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>