force-app/main/default/objects/Bus__c/validationRules/Odometer_readings_are_correct.validationRule-meta.xml
<ValidationRule>
    <fullName>Odometer_readings_are_correct</fullName>
    <active>true</active>
    <errorConditionFormula>Odometer_Reading__c &lt;  Last_Maintenance_Odometer_Reading__c</errorConditionFormula>
    <errorMessage>Odometer reading cann&apos;t be less than Last Maintenance Odometer Reading</errorMessage>
</ValidationRule>