force-app/main/default/objects/Bus__c/validationRules/Wheels_are_Even.validationRule-meta.xml
<ValidationRule>
    <fullName>Wheels_are_Even</fullName>
    <active>true</active>
    <errorConditionFormula>(Number_of_Wheels__c  / 2)  = 1</errorConditionFormula>
    <errorDisplayField>Number_of_Wheels__c</errorDisplayField>
    <errorMessage>Number of wheels must be even</errorMessage>
</ValidationRule>