force-app/main/default/objects/Bus__c/validationRules/Year_is_Correct.validationRule-meta.xml
<ValidationRule>
    <fullName>Year_is_Correct</fullName>
    <active>true</active>
    <errorConditionFormula>Year__c &lt; 1950  ||  Year__c &gt; YEAR(TODAY())</errorConditionFormula>
    <errorDisplayField>Year__c</errorDisplayField>
    <errorMessage>Year value should be between 1950 and current year</errorMessage>
</ValidationRule>