force-app/main/default/objects/Bus__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Maximum_Capacity__c</columns>
    <columns>Number_of_Wheels__c</columns>
    <columns>Odometer_Reading__c</columns>
    <columns>Resale_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>